--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
   </style>
 
-  <title>South Africa VS Scotland Live Match - Rugby World Cup 2023</title>
+  <title>Live Match - Rugby World Cup 2023</title>
 
 
   <!-- Font Awesome CDN link-->
